# polka

./: README.md  biome.json  flake.nix  package.json  pnpm-lock.yaml  shell.nix  spec.md  tsconfig.json  tsup.config.ts
@types/: index.ts
app/: README.md  index.html  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  webpack.config.js
cli/: .env.example  README.md  cli.ts  convert.ts  daemon.ts  index.ts  package.json  pnpm-lock.yaml  tui
db/: package.json
desktop/: .gitignore  README.md  electron-builder.json  electron.vite.config.ts  index.html  index.ts  package.json  preload.ts  tsconfig.json  tsup.config.ts
docs/: book.toml
generator/: .gitignore
pds/: .gitignore  README.md  go.mod  go.sum  index.ts  main.go  (+2 more)
repo/: .gitignore  Cargo.toml  go.mod  go.sum  main.go  polka:repo.wasm
repo/core/: cbor_gen.go  repo.go
repo/internal/polka/repo/repo/: abi.go  repo.exports.go  repo.wasm.go  repo.wit.go
repo/internal/polka/repository/repo/: abi.go  repo.exports.go  repo.wasm.go  repo.wit.go
repo/internal/wasi/cli/terminal-stdin/: terminal-stdin.wit.go
repo/internal/wasi/filesystem/types/: abi.go
repo/internal/wasi/sockets/instance-network/: instance-network.wit.go
repo/internal/wasi/sockets/tcp/: tcp.wit.go
repo/internal/wasi/sockets/udp/: abi.go
repo/internal/wasi/sockets/udp-create-socket/: udp-create-socket.wit.go
repo/mst/: diff.go
repo/repo/: repo.go
repo/src/: lib.rs  repository.rs  wrapper.rs
repo/utils/: key.go
repo/wit/: blockstore.wit  commit.wit  crud.wit  polka:repository@0.1.0.wasm  repo.wit
(+386 files in other folders)
