[package]
name = "repo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.47.0" }
tokio = { version = "1.48.0", features = ["sync", "macros"] }
futures = "0.3"
atrium-api = "0.25.6"
atrium-repo = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_ipld_dagcbor = "0.6"
once_cell = "1.20.2"
cid = "0.11.1"
hex = "0.4"
